# webCrawlAgent

./: .env.example  .gitignore  README.md  pyproject.toml
src/webcrawlagent/: __init__.py  config.py
src/webcrawlagent/app/: api.py  dependencies.py
src/webcrawlagent/crawler/: __init__.py  extractor.py  session.py
src/webcrawlagent/llm/: exceptions.py  gemini_client.py  summary.py
src/webcrawlagent/report/: builder.py
tests/: test_analyzer.py  test_gemini_client.py  test_llm_factory.py
webcrawlagent/: cli.py  main.py
webcrawlagent/app/: service.py
webcrawlagent/app/static/: index.html
webcrawlagent/crawler/: analyzer.py
webcrawlagent/llm/: factory.py  grok_client.py
webcrawlagent/report/: builder.py  models.py
